cleanup module instantiation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,7 @@ set(WASM_LINKER_OPTS
     -Wno-pthreads-mem-growth
     -sMODULARIZE=1
     -sEXPORT_ES6=1
-    -sEXPORT_NAME=${WASM_TARGET}
-    -sEXPORTED_FUNCTIONS=[___get_exception_message]
-    -sEXPORTED_RUNTIME_METHODS=[allocateUTF8,UTF8ToString,wasmMemory,getExceptionMessage,stringToUTF8,lengthBytesUTF8]
+    -sEXPORT_NAME='bind'
     -sSTACK_OVERFLOW_CHECK=1
     -sALLOW_MEMORY_GROWTH=1
     -sDEMANGLE_SUPPORT=1
