Support webworker implementation

--- a/demo/es6module/tsconfig.json
+++ b/demo/es6module/tsconfig.json
@@ -8,5 +8,5 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["openssl.ts"]
+  "include": ["openssl.ts", "worker.ts" ],
 }
